Resolução desafio front-end função restaurar objetivos

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,12 @@ html {
   font-size: 62.5%;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: 'Nunito', sans-serif;
@@ -9,6 +15,7 @@ body {
   font-family: 'Roboto', sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #F5F5F5;
 }
 
 code {
