--- a/frontend/src/components/SideMenu/styles.css
+++ b/frontend/src/components/SideMenu/styles.css
@@ -25,6 +25,11 @@
     cursor: pointer;
 }
 
+.menu-item:hover, .item-selected {
+    background-color: rgba(255, 255, 255, 0.23);
+    border-right: 5px solid #F55673;
+}
+
 .menu-item img {
     width: 2.2rem;
     height: 2.2rem;
