--- a/frontend/src/components/SideMenu/styles.css
+++ b/frontend/src/components/SideMenu/styles.css
@@ -23,9 +23,10 @@
     height: 4rem;
     /* border: 1px solid purple; */
     cursor: pointer;
+    margin-bottom: 2px;
 }
 
-.menu-item:hover, .item-selected {
+.item-selected {
     background-color: rgba(255, 255, 255, 0.23);
     border-right: 5px solid #F55673;
 }
