Resolução desafio front-end função adicionar objetivo

--- a/frontend/src/components/GoalsPanel/styles.css
+++ b/frontend/src/components/GoalsPanel/styles.css
@@ -48,8 +48,7 @@
 
 .goal-info h1 {
     margin-bottom: 0.5rem;
-    font-size: 24px;
-    line-height: 33px;
+    font-size: 2.4rem;
 }
 
 .goal-info p {
