--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,10 +1,6 @@
-.App {
-  display: flex;
-  min-width: 100%;
-}
-
 .main {
   display: flex;
   flex-direction: column;
-  width: calc(100vw - 20rem);
+  width: 85%;
+  position: relative;
 }
