--- a/frontend/src/components/GoalsPanel/styles.css
+++ b/frontend/src/components/GoalsPanel/styles.css
@@ -1,11 +1,20 @@
 .goals-panel {
     display: flex;
     flex-direction: column;
-    padding-left: 8.5rem;
-    padding-right: 8.6rem;
-  }
+    margin-left: 85px;
+    margin-right: 86px;
+    padding-bottom: 80px;
+}
+
+.mt-25 {
+    margin-top: 25px;
+}
+
+.mt-98 {
+    margin-top: 98px;
+}
   
-  .goals-panel button {
+.btn-add-top {
     all: unset;
     box-sizing: border-box;
     align-self: flex-end;
@@ -16,19 +25,20 @@
     font-size: 16px;
     border-radius: 8px;
     padding: 15px 60px;
-    margin-bottom: 40px;
-    width: 22rem;
+    margin-bottom: 25px;
     cursor: pointer;
-  }
+}
 
 .goal {
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
     background-color: #FFFFFF;
     box-shadow: -1px 1px 3px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
     padding: 4px 18px 7px 20px;
-    min-height: 11.1rem;
+    min-height: 111px;
+    min-width: 365px;
     margin-bottom: 15px;
 }
 
@@ -40,12 +50,6 @@
     background-color: #ECECEC;
 }
 
-.goal-card {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
 .goal-info h1 {
     margin-bottom: 0.5rem;
     font-size: 2.4rem;
@@ -53,8 +57,8 @@
 
 .goal-info p {
     font-size: 1.1rem;
-    width: 48rem;
-    height: 3rem;
+    max-width: 480px;
+    height: 30px;
     margin-bottom: 14px;
     color: #000000;
 }
@@ -73,7 +77,6 @@
 .goal-actions {
     display: flex;
     flex-direction: column;
-    justify-self: flex-end;
     align-self: flex-end;
     gap: 16px;
 }
@@ -92,4 +95,51 @@
     font-size: 9px;
     font-style: italic;
     color: #444444;
+}
+
+.button-end {
+    display: none;
+}
+
+@media (max-width: 375px) {
+    .goals-panel {
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    .goal {
+        width: 365px;
+        flex-wrap: nowrap;
+    }
+
+    .btn-add-top {
+        display: none;
+    }
+
+    .button-end {
+        all: unset;
+        box-sizing: border-box;
+        background-color: #535EE6;
+        color: #FFFFFF;
+        font-family: 'Roboto', sans-serif;
+        font-weight: 500;
+        font-size: 16px;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        height: 48px;
+        text-align: center;
+    }
+    
+    .goal-info p {
+        max-width: 273px;
+    }
+
+    .goal-buttons img {
+        width: 28px;
+    }
+
+    .hide-buttons {
+        display: none;
+    }
 }
