--- a/frontend/src/components/Header/styles.css
+++ b/frontend/src/components/Header/styles.css
@@ -4,6 +4,7 @@ header {
     align-items: center;
     padding: 1.1rem 1.8rem 1.1rem 2rem;
     background-color: #FFF;
+    max-width: 100vmax;
 }
 
 header span {
@@ -25,6 +26,69 @@ header input {
     font-size: 15px;
     background-image: url('../../assets/search-icon.svg');
     background-repeat: no-repeat;
-    background-position-x: 97%;
+    background-position-x: 96%;
     background-position-y: center;
+}
+
+.top-menu, .menu-options {
+  display: none;
+}
+
+@media (max-width: 375px) {
+  header span {
+      display: none;
+  }
+
+  header {
+    width: 375px;
+  }
+
+  .top-menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #D9D9D9;
+    width: 375px;
+    height: 50px;
+    padding: 12px 14px;
+  }
+
+  .menu-options {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    background-color: #D9D9D9;
+    width: 100vw;
+    height: 25vh;
+    padding-top: 2px;
+    padding-right: 7px;
+    z-index: 2;
+  }
+
+  .icon-close-menu {
+    width: 48px;
+    height: 48px;
+    align-self: flex-end;
+    margin-bottom: 10px;
+  }
+
+  .btn-options {
+    display: flex;
+    flex-direction: column;
+    gap: 5px
+  }
+
+  .btn-options button {
+    all: unset;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    gap: 10px;
+    padding: 12px 20px;
+    border: 1px solid #F55673;
+    border-radius: 5px;
+  }
 }
