--- a/frontend/src/components/SideMenu/styles.css
+++ b/frontend/src/components/SideMenu/styles.css
@@ -21,7 +21,6 @@
     gap: 0.8rem;
     padding-left: 0.7rem;
     height: 4rem;
-    /* border: 1px solid purple; */
     cursor: pointer;
     margin-bottom: 2px;
 }
@@ -40,4 +39,10 @@
     width: 11.7rem;
     margin-bottom: 3.7rem;
     align-self: center;
+}
+
+@media (max-width: 375px) {
+    .side-menu {
+        display: none;
+    }
 }
