--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,24 +1,35 @@
-html {
-  font-size: 62.5%;
-}
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+html {
+  font-size: 62.5%;
+}
+
 body {
   margin: 0;
   font-family: 'Nunito', sans-serif;
-  /* font-family: 'Comfortaa', cursive;
-  font-family: 'Roboto', sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #F5F5F5;
+  font-size: 1.6rem;
+}
+
+#root {
+  display: flex;
+  min-height: 100vh;
+  max-width: 100vw;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+@media (max-width: 375px) {
+  #root {
+      width: 375px;
+  }
 }
